# UCB-MIDS-AvalancheGuard

./: LICENSE  README.md
AvaGuardApp/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
AvaGuardApp/deploy/: 3rdpartylicenses.txt
AvaGuardApp/deploy/browser/: index.html  (+9 more)
AvaGuardApp/src/: index.html
AvaGuardServer/: pod_desc.txt  pyproject.toml  run.sh
AvaGuardServer/infra/bases/: config-map.yaml  deployment-lab3.yaml  deployment-redis.yaml  kustomization.yaml  namespace.yaml  service-lab3.yaml
AvaGuardServer/infra/overlays/dev/: kustomization.yaml  patch-deployment-lab3.yaml
AvaGuardServer/src/: main.py
AvaGuardServer/src/AvaGuardHelpers/: avaguard_models.py  commonHelper.py  mongoAtlasHelper.py  observationHelper.py  security_configurations.py  userHelper.py
AvaGuardServer/src/DraftNotebooks/: AutoCropping.ipynb  DataConversionUsingServerAPI.ipynb  InvokeSageMakerEndPOint.ipynb  UUID Test.ipynb  upload to S3.ipynb
Jupyter-Notebooks/: AR-DeployPreTrainedModel.ipynb  AR-Invoke-Sagemaker-EndPoint.ipynb  AR-S3 Object Moving And Copying.ipynb  AR-TrainAndDeploy-RESNET-TensorFlow-01.ipynb  AR-WebScrape-SierraAvalancheCenter.ipynb  AR_CustomCNN_TerrainOrNot.ipynb  AR_Invoke_Trained_Model.ipynb  ModelTraining_Avi_noAvi_1.ipynb  ModelTraining_SnowyTerrain_orNOT_w_landscapes.ipynb  Utility-TrainTestValSplit_ImageFolder.ipynb
Jupyter-Notebooks/Mandy/: Avi_noAvi_1.ipynb  ClassificationModel_TestOnOriginalDataset.ipynb  segmentation_visualizations.ipynb
Jupyter-Notebooks/deploy-models/: AR_Load_Deploy_Invoke_Trained_Model-MODEL_1.ipynb  (+1 more)
(+78 files in other folders)
